# lazarus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/specs/: 2026-06-29-lazarus-design.md
examples/: config.yaml
src/lazarus/: alerter.py  checks.py  cli.py  config.py  detection.py  remediation.py  state.py
tests/: test_alerter.py  test_checks.py  test_config.py  test_detection.py  test_e2e.py  test_remediation.py  test_smoke.py  test_state.py
