[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lazarus"
version = "0.1.0"
description = "Self-healing monitor for homelab/edge infra — detects failures, auto-remediates, alerts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
lazarus = "lazarus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
